bug fixes and changing csv to json for caldata
