# js/routes/data/calData.js
@@ -1,116 +1,116 @@
 //imports express
 const express = require('express')
+const cookieParser = require('cookie-parser')
 
 //acts sort of like a middleware with routing capabilities
 const router = express.Router();
-
-const DATA_BACKUP = require('./../../modules/calDataToJson')
-
-var data = DATA_BACKUP
-
-
-//takes in a starting date and removes anything from data that isnt on or after the starting date
-function startDate(start){
-    removeLower(start, 'Date');
-
-}
-
-//takes in an end date and removes anything from data that isnt on or before the end date
-function endDate(end){
-    removeUpper(end, 'Date')
-}
-
-
-//takes in an earliest time and removes anything from data before then
-function startTime(time) {
-    removeLower(time, 'Start_Time')
-}
-
-function endTime(time) {
-    removeUpper(time, 'End_Time')
-}
-
-//sets the lower bounds for data
-function removeLower(limit, index) {
-    var temp = []
-    for (i = data.length - 1; i >= 0; i--) {
-        if (parseInt(data[i][index]) >= limit) {
-            temp.unshift(data[i])
-        }
-    }
-    data = temp;
-    temp = []
-}
-
-//sets the upper bound for the data
-function removeUpper(limit, index) {
-    var temp = []
-    for (i = data.length - 1; i >= 0; i--) {
-        if (parseInt(data[i][index]) <= limit) {
-            temp.unshift(data[i])
-        }
-    }
-    data = temp;
-    temp = []
-}   
+router.use(cookieParser())
+var users = require('./../../modules/encryption/decryptUsers.js')
 
 // handle incoming request to /users
 router.get('/', (req, res, next) => {
+
+    var data = require('./../../data/calData/A2F Gen Pub.json')['events']
+
+    //checks that there are cookies
+    if (req.cookies.email) {
+        //false if user doesnt exist, otherwise is the user
+        var user = getUser(req.cookies.email)
+
+        var sessions = require('./../../modules/encryption/decryptSessions.js')
+        var userSessions = sessions[req.cookies.email]
+
+        //checks if cookies are valid still
+        var valid = false
+        userSessions.forEach(element => {
+            if (element == req.cookies.seshId) {
+                valid = true;
+            }
+        });
+
+        if (user && valid) {
+            if (user['gender'] == 'male' || user['gender'] == 'm') {
+                if (user['year'] === 1 || user['year'] === 'frosh') {
+                    data = require('./../../data/calData/A2F Frosh Bro.json')['events']
+                } else {
+                    data = require('./../../data/calData/A2F Soph Bro.json')['events']
+                }
+            } else {
+                if (user['year'] === 1 || user['year'] === 'frosh') {
+                    data = require('./../../data/calData/A2F Frosh Sis.json')['events']
+                } else {
+                    data = require('./../../data/calData/A2F Soph Sis.json')['events']
+                }
+            }
+        } else {
+            const error = new Error("Bad Requests");
+            error.status = 403;
+            error.message = "403 in calData. Invalid cookies"
+            next(error);
+        }
+    }
+    
+
     //checks to see what params were passed
-    var sdDef = false;
-    var edDef = false;
     var stDef = false;
     var etDef = false;
 
-    params = req.query
-    //start and end dates
-    if (params['Start_Date'] != undefined) {
-        sdDef = true;
-        startDate(params['Start_Date']);
-    } else {
-        sdDef = false;
-    }
-
-    if (params['End_Date'] != undefined) {
-        edDef = true;
-        endDate(params['End_Date']);
-    } else {
-        edDef = false;
-    }
+    params = req.body
 
     //start and end time
-    if (params['Start_Time'] != undefined) {
+    if (params['startTime'] != undefined) {
         stDef = true;
-        startTime(params['Start_Time']);
-    } else {
-        stDef = false;
+        data = startTime(Date.parse(params['startTime']), data);
     }
-    if (params['End_Time'] != undefined) {
+    if (params['endTime'] != undefined) {
         etDef = true;
-        endTime(params['End_Time']);
-    } else {
-        etDef = false;
+        data = endTime(Date.parse(params['endTime']), data);
     }
-    
+
     //checks for a valid call before replying with a status code
-    if (sdDef && edDef && parseInt(params['End_Date']) < parseInt(params['Start_Date'])) {
+    if (stDef && etDef && parseInt(params['endTime']) < parseInt(params['startTime'])) {
         const error = new Error("Bad Requests");
         error.status = 403;
-        error.message = "403 End_Date is before Start_Date"
-        next(error);        
-    } else if (stDef && etDef && parseInt(params['End_Time']) < parseInt(params['Start_Time'])) {
-        const error = new Error("Bad Requests");
-        error.status = 403;
-        error.message = "403 End_Time is before Start_Time"
-        next(error);  
-    } else { 
+        error.message = "403 in calData. endTime is before startTime"
+        next(error);
+    } else {
         res.status(200)
         res.send(data);
     }
-
-    //resets data for future queries
-    data = DATA_BACKUP
 });
+
+
+//sets the lower bounds for data
+function startTime(time, data) {
+    var temp = []
+    for (i = data.length - 1; i >= 0; i--) {
+        if (Date.parse(data[i]['startTime']) >= time) {
+            temp.unshift(data[i])
+        }
+    }
+    return temp
+}
+
+//sets the upper bound for the data
+function endTime(time, data) {
+    var temp = []
+    for (i = data.length - 1; i >= 0; i--) {
+        if (Date.parse(data[i]['endTime']) <= time) {
+            temp.unshift(data[i])
+        }
+    }
+    return temp
+}
+
+function getUser(email) {
+
+    for (index in users) {
+        if (users[index]['email'] === email) {
+            return users[index]
+        }
+    }
+    return false
+}
 
 
 module.exports = router;
